[package]
name = "emoticount"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5"
lazy_static = "1.4"

[dependencies.serenity]
version = "0.10"
features = ["cache"]

[dependencies.sqlx]
version = "0.5"
features = ["runtime-tokio-rustls", "sqlite", "offline"]

[dependencies.tokio]
version = "1.7"
features = ["macros", "fs", "rt-multi-thread"]
